project/terraform/main.tf
provider "aws" { 
    region = "eu-central-1"
  
}


resource "aws_vpc" "vpc" {
  cidr_block = "${var.cidr_vpc}"
  enable_dns_support   = true
  enable_dns_hostnames = true
   tags = {
    Environment  = "${var.environment_tag}"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Environment = "${var.environment_tag}"
  }
}
resource "aws_subnet" "subnet_public" {
  vpc_id = "${aws_vpc.vpc.id}"
  cidr_block = "${var.cidr_subnet}"
  #cidr_block = cidrsubnet("${var.cidr_subnet}",)
  map_public_ip_on_launch = "true"
  availability_zone = "eu-central-1a"
  tags = {
    Environment = "${var.environment_tag}"
  }
}
resource "aws_subnet" "subnet_public1" {
  vpc_id = "${aws_vpc.vpc.id}"
  cidr_block = "10.1.1.0/24"
  #cidr_block = cidrsubnet("${var.cidr_subnet}",)
  map_public_ip_on_launch = "true"
  availability_zone = "eu-central-1b"
  tags = {
    Environment = "${var.environment_tag}"
  }
}


resource "aws_route_table" "rtb_public" {
  vpc_id = "${aws_vpc.vpc.id}"
route {
      cidr_block = "0.0.0.0/0"
      gateway_id = "${aws_internet_gateway.igw.id}"
  }
tags = {
    Environment = "${var.environment_tag}"
  }
}
resource "aws_route_table_association" "rta_subnet_public" {
  subnet_id      = "${aws_subnet.subnet_public.id}"
  route_table_id = "${aws_route_table.rtb_public.id}"
}
resource "aws_route_table_association" "rta_subnet_public1" {
  subnet_id      = "${aws_subnet.subnet_public1.id}"
  route_table_id = "${aws_route_table.rtb_public.id}"
}


resource "aws_security_group" "sg_22" {
  name = "sg_22"
  vpc_id = "${aws_vpc.vpc.id}"
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
 egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Environment = "${var.environment_tag}"
  }
}




resource "aws_key_pair" "ec2key" {
  key_name = "mypublicKey"
  public_key = "${file(var.public_key_path)}"
}



#resource "aws_instance" "testInstance" {
#  ami           = "${var.instance_ami}"
#  instance_type = "${var.instance_type}"
#  subnet_id = "${aws_subnet.subnet_public.id}"
#  vpc_security_group_ids = ["${aws_security_group.sg_22.id}"]
#  key_name = "${aws_key_pair.ec2key.key_name}"
# tags = {
#  Environment = "${var.environment_tag}"
# }
#}
